# AILMS

./: .env  .env.example  .flake8  .gitconfig  .pre-commit-config.yaml  CODE_REVIEW_REPORT.md  DEPLOYMENT.md  Makefile  README.md  README_REFACTORED.md  backend_test.py  debug_test.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  test_result.md  test_system.py
backend/: .env  auth.py  cache_manager.py  config.py  database.py  database_optimized.py  enhanced_ai_generator.py  fault_tolerance.py  main.py  message_queue.py  models.py  performance_config.py  pytest.ini  rate_limiter.py  requirements.txt  security_enhancements.py  server.py  tasks.py  utils.py
backend/routes/: admin.py  ai_ethics.py  alumni.py  analytics.py  assessment.py  assignments.py  career.py  chat.py  course_content.py  courses.py  discussions.py  files.py  instructor.py  integrations.py  marketplace.py  notifications.py  parent.py  proctoring.py  profile.py  rbac.py  reviewer.py  reviews.py  student.py  wellbeing.py
backend/tests/: __init__.py  conftest.py  seed_database.py  test_all_api_endpoints.py  test_all_user_types.py  test_assignments_endpoints.py  test_auth.py  test_auth_endpoints.py  test_base.py  test_course_endpoints.py  test_database.py  test_e2e_workflows.py  test_edge_cases.py  test_enhanced_ai_features.py  test_integration_auth.py  test_integration_courses.py  test_integration_real_data.py  test_models.py  test_other_endpoints.py  test_performance.py  test_security.py  (+2 more)
config/: .env
content/: ai-in-education-course.json
docker/: ai-service.Dockerfile  analytics-service.Dockerfile  api-gateway.Dockerfile  assessment-service.Dockerfile  auth-service.Dockerfile  backend.Dockerfile  celery-worker.Dockerfile  course-service.Dockerfile  file-service.Dockerfile  notification-service.Dockerfile  user-service.Dockerfile
frontend/: .env
mongo/: init.js
monitoring/: prometheus.yml
nginx/: default.conf  nginx.conf
redis/: redis.conf
scripts/: import_course_content.py
shared/: requirements.txt
tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py
(+235 files in other folders)
